correcion-peso-imagenes

--- a/index.html
+++ b/index.html
@@ -8,9 +8,7 @@
     <link rel="icon" href="favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="./assets/css/main.css">
     <script src="https://kit.fontawesome.com/b229e29af4.js" crossorigin="anonymous"></script>
-    <!-- jquery -->
     <script src='https://code.jquery.com/jquery-2.2.4.min.js'></script>
-
 </head>
 
 <body>
@@ -18,14 +16,14 @@
         <img data-logo width="78" src="./assets/image/logo_urbanisk_blanco.webp">
         <nav class="urb_nav">
             <ul class="urb_nav-list" data-menu>
-                <li class="urb_nav-listItem"><a class="item_menu" data="item1" href="#inicio">Inicio</a></li>
-                <li class="urb_nav-listItem"><a class="item_menu" data="item2" href="#nosotros">Nosotros</a></li>
-                <li class="urb_nav-listItem"><a class="item_menu" data="item3" href="#servicios">Servicios</a></li>
-                <li class="urb_nav-listItem"><a class="item_menu" data="item4" href="#productos">Productos</a></li>
-                <li class="urb_nav-listItem"><a class="item_menu" data="item5" href="#equipo">Equipo</a></li>
-                <li class="urb_nav-listItem"><a class="item_menu" data="item6" href="#experiencia">Experiencia</a></li>
-                <li class="urb_nav-listItem"><a class="item_menu" data="item7" href="#alianzas">Alianzas estratégicas</a></li>
-                <li class="urb_nav-listItem-contacto"><a class="item_menu" data="item8" href="#contacto" class="nav-btn">Contacto</a></li>
+                <li class="urb_nav-listItem"><a class="listItem" data="item1" href="#inicio">Inicio</a></li>
+                <li class="urb_nav-listItem"><a class="listItem" data="item2" href="#nosotros">Nosotros</a></li>
+                <li class="urb_nav-listItem"><a class="listItem" data="item3" href="#servicios">Servicios</a></li>
+                <li class="urb_nav-listItem"><a class="listItem" data="item4" href="#productos">Productos</a></li>
+                <li class="urb_nav-listItem"><a class="listItem" data="item5" href="#equipo">Equipo</a></li>
+                <li class="urb_nav-listItem"><a class="listItem" data="item6" href="#experiencia">Experiencia</a></li>
+                <li class="urb_nav-listItem"><a class="listItem" data="item7" href="#alianzas">Alianzas estratégicas</a></li>
+                <li class="urb_nav-listItem-contacto"><a class="listItem" data="item8" href="#contacto" class="nav-btn">Contacto</a></li>
             </ul>
         </nav>
     </header>
@@ -40,10 +38,10 @@
                         class="fa-solid fa-chevron-down"></i></a>
             </div>
             <div class="urb_home_slider no-select">
-                <img src="./assets/image/image_1.png" alt="Planificación Territorial y Gestión del Suelo">
-                <img src="./assets/image/image_2.png" alt="Arquitectura y Urbanismo">
-                <img src="./assets/image/image_3.png" alt="Gestión de Proyectos">
-                <img src="./assets/image/image_4.png" alt="Formación y certificación profesional">
+                <img src="./assets/image/image_1.webp" alt="Planificación Territorial y Gestión del Suelo">
+                <img src="./assets/image/image_2.webp" alt="Arquitectura y Urbanismo">
+                <img src="./assets/image/image_3.webp" alt="Gestión de Proyectos">
+                <img src="./assets/image/image_4.webp" alt="Formación y certificación profesional">
             </div>
             <div class="overlay_slider"></div>
         </section>
@@ -122,11 +120,11 @@
                 <h1 class="urb_title">Creciendo juntos para llegar más lejos</h1>
             </div>
             <div class="urb_ali-images no-select">
-                <img src="./assets/image/logo_1.png">
-                <img src="./assets/image/logo_2.png">
-                <img src="./assets/image/logo_3.png">
-                <img src="./assets/image/logo_4.png">
-                <img src="./assets/image/logo_5.png">
+                <img src="./assets/image/alianza_1.webp" alt="">
+                <img src="./assets/image/alianza_2.webp" alt="">
+                <img src="./assets/image/alianza_3.webp" alt="">
+                <img src="./assets/image/alianza_4.webp" alt="">
+                <img src="./assets/image/alianza_5.webp" alt="">
             </div>
             <span class="urb_ali-svgBottom"></span>
         </section>
@@ -192,12 +190,12 @@
             </div>
         </section>
         <section class="urb_copy">
-            © 2025 Creado por  Lenny Loor
+            © 2025 Desarrollado por Lenny Loor
         </section>
     </main>
-    <!-- script -->
-    <script type="module" src="/assets/js/components/components.js"></script>
+    <!-- script -->    
     <script src="assets/js/main.js"></script>
+    <script type="module" src="/assets/js/components/components.js"></script>
     <script src='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.2.1/js/bootstrap.min.js'></script>
 </body>
 
