modificaciones-contenido-desktop

--- a/index.html
+++ b/index.html
@@ -24,13 +24,17 @@
         </div>
         <nav class="urb_nav">
             <ul class="urb_nav-list" id="urb_nav-list" data-menu>
-                <li class="urb_nav-listItem"><a class="listItem" data="item1" href="#inicio">Inicio</a></li>
-                <li class="urb_nav-listItem"><a class="listItem" data="item2" href="#nosotros">Nosotros</a></li>
-                <li class="urb_nav-listItem"><a class="listItem" data="item3" href="#servicios">Servicios</a></li>
-                <li class="urb_nav-listItem"><a class="listItem" data="item4" href="#productos">Productos</a></li>
-                <li class="urb_nav-listItem"><a class="listItem" data="item5" href="#equipo">Equipo</a></li>
-                <li class="urb_nav-listItem"><a class="listItem" data="item6" href="#experiencia">Experiencia</a></li>
-                <li class="urb_nav-listItem"><a class="listItem" data="item7" href="#alianzas">Alianzas estratégicas</a>
+                <li class="urb_nav-listItem center"><a class="listItem" data="item1" href="#inicio">Inicio</a></li>
+                <li class="urb_nav-listItem center"><a class="listItem" data="item2" href="#nosotros">Nosotros</a></li>
+                <li class="urb_nav-listItem center"><a class="listItem" data="item3" href="#servicios">Servicios</a>
+                </li>
+                <li class="urb_nav-listItem center"><a class="listItem" data="item4" href="#productos">Productos</a>
+                </li>
+                <li class="urb_nav-listItem center"><a class="listItem" data="item5" href="#equipo">Equipo</a></li>
+                <li class="urb_nav-listItem center"><a class="listItem" data="item6" href="#experiencia">Experiencia</a>
+                </li>
+                <li class="urb_nav-listItem center"><a class="listItem" data="item7" href="#alianzas">Alianzas
+                        estratégicas</a>
                 </li>
                 <li class="urb_nav-listItem-contacto"><a class="listItem" data="item8" href="#contacto"
                         class="nav-btn">Contacto</a></li>
@@ -46,7 +50,7 @@
                 <p class="urb_home-subtitle txt-center">Soluciones innovadoras en planificación territorial, diseño
                     arquitectónico y urbano, medio ambiente y
                     gestión de proyectos para un desarrollo eficiente y sostenible.</p>
-                <a href="#contacto" class="btn-primary m-auto no-select">Hablemos de tu proyecto <i
+                <a href="#contacto" class="urb_btn btn-primary m-auto no-select">Hablemos de tu proyecto <i
                         class="fa-solid fa-chevron-down"></i></a>
             </div>
             <div class="urb_home_slider no-select">
@@ -65,40 +69,46 @@
                     <h3>Sobre Nosotros</h3>
                     <h2>¿Quiénes somos?</h2>
                 </div>
-                <p class="urb_p">Desde 2008, nos hemos consolidado como una empresa líder en consultoría y gestión de
-                    proyectos,
-                    brindando soluciones integrales y personalizadas en planificación territorial, gestión urbana y
-                    ambiental, diseño arquitectónico e ingeniería, así como en el desarrollo de políticas públicas y
-                    normativas. Nuestra amplia experiencia en el sector público y privado nos permite abordar cada
-                    proyecto con un enfoque estratégico, garantizando eficiencia, innovación y cumplimiento normativo en
-                    cada solución que ofrecemos.</p>
+                <p class="txt-secundary">Desde 2008, nos hemos consolidado como una empresa líder en consultoría y
+                    gestión de proyectos, brindando soluciones integrales y personalizadas en planificación territorial,
+                    gestión urbana y ambiental, diseño arquitectónico e ingeniería, así como en el desarrollo de
+                    políticas públicas y normativas. Nuestra amplia experiencia en el sector público y privado nos
+                    permite abordar cada proyecto con un enfoque estratégico, garantizando eficiencia, innovación y
+                    cumplimiento normativo en cada solución que ofrecemos.</p>
             </div>
         </section>
         <!-- Servicios -->
         <section id="servicios" class="p-section urb_serv bg-section">
-            <div class="urb_serv-title txt-center">
+            <div class="urb_box-title al-center">
                 <h3>Nuestros Servicios</h3>
-                <h2>Soluciones a tu medida</h2>
+                <h4> ¿Qué te ofrecemos? </h4>
+                <h2>Soluciones estratégicas para potenciar tu proyecto </h2>
             </div>
             <card-servicios class="urb_serv-content"></card-servicios>
         </section>
         <!-- Productos -->
-        <section id="productos" class="p-section">
-            <div class="urb_box-title">
+        <section id="productos" class="section_prd p-section center">
+            <div class="urb_box-title al-center">
                 <h3>Nuestros Productos</h3>
-                <h2>Impulsamos soluciones tecnológicas y control remoto con el respaldo de softwares líderes </h2>
+                <h2>Impulsamos soluciones tecnológicas y sistemas de control remoto con el respaldo de softwares líderes
+                </h2>
             </div>
             <card-productos class="urb_box-prod"></card-productos>
         </section>
         <!-- Nuestro Equipo -->
         <section id="equipo" class="section_nst">
             <div class="urb_box-title urb_nst_title">
-                <h3>Nuestro Equipo</h3>
-                <h2 class="subtitle-secundary">Más que consultores, somos aliados estratégicos en cada proyecto</h2>
-                <p>La experiencia y especialización de nuestro equipo nos permite abordar cada proyecto con una
-                    visión integral, ofreciendo soluciones innovadoras en el diseño arquitectónico, planificación
-                    territorial y la gestión urbana y ambiental.
-                </p>
+                <div class="nst_title">
+                    <h3>Nuestro Equipo</h3>
+                    <h2 class="subtitle-secundary">Más que consultores, somo aliados estratégicos en cada proyecto</h2>
+                    <p>La experiencia y especialización de nuestro equipo nos permite abordar cada proyecto con una
+                        visión
+                        integral, ofreciendo soluciones innovadoras en el diseño arquitectónico, planificación
+                        territorial,
+                        gestión urbana y ambiental. </p>
+
+                </div>
+                <div class="overlay_nst"></div>
             </div>
             <div class="nst_card">
                 <card-nosotros-ep class="nst_card-content center"></card-nosotros-ep>
@@ -143,24 +153,24 @@
                     <div class="urb_cont-detalle">
                         <h3>Contáctanos</h3>
                         <p>Puedes escribirnos a través de nuestros canales o seguirnos en redes sociales.</p>
-                        <a><i class="fa-solid fa-phone"></i> +593 98 887 2797</a>
+                        <a><i class="fa-solid fa-phone"></i> (+593) 98 887 2797</a>
                         <a href="https://wa.me/56963380098" target="_blank">
-                            <i class="fa-brands fa-whatsapp"></i>+593 96 338 0098 </a>
+                            <i class="fa-brands fa-whatsapp"></i>(+593) 96 338 0098 </a>
                         <a href="mailto:proyectos@urbansitikconsultores.com"><i
-                                class="fa-solid fa-envelope"></i>proyectos@urbansitikconsultores.com</a>
+                                class="fa-solid fa-envelope"></i>proyectos@urbanistikconsultores.com</a>
                     </div>
                 </div>
                 <div class="urb_cont-2">
                     <div class="of-box">
                         <h3>Oficinas</h3>
-                        <a href="https://maps.app.goo.gl/XM1xzDdxDyqjLnxM9" target="_blank">
-                            Francisco de Marcos 330 y Chimborazo.
-                            2do. Piso 2B.
-                            <br><b>Guayaquil</b>
-                        </a>
                         <a href="https://maps.app.goo.gl/P4NmPUtEtdd4FQfE9" target="_blank">
                             Urbanización Sambocity Etapa Hollywood Park Mz. 5 V1
                             <br><b>Daule – La Aurora</b>
+                        </a>
+                        <a>
+                            Francisco de Marcos 330 y Chimborazo.
+                            2do. Piso 2B.
+                            <br><b>Guayaquil</b>
                         </a>
 
                     </div>
@@ -194,10 +204,14 @@
                             <textarea id="mensaje" name="mensaje" required
                                 placeholder="Cuéntanos sobre tu proyecto, tus ideas o necesidades"></textarea>
                         </div>
-                        <small>Al enviar el formulario asumimos su conformidad con nuestro aviso legal y nuestra
-                            política de privacidad. </small>
 
-                        <button type="submit" class="btn-primary m-auto no-select">Enviar</button>
+                        <div class="checkbox-container no-select">
+                            <input type="checkbox" name="terminos" id="terminos" required>
+                            <label for="terminos">Al enviar el formulario asumimos su conformidad con nuestro
+                                <a href="#" id="abrirModal">aviso legal y nuestra
+                                    política de privacidad.</a></label>
+                        </div>
+                        <button type="submit" id="btn-form" class="urb_btn btn-disabled m-auto no-select">Enviar</button>
                     </form>
                 </div>
             </div>
@@ -207,6 +221,35 @@
         </section>
     </main>
     <a class="btn-scrollTop"></a>
+
+    <!-- Modal -->
+    <div id="modal_tc" class="modal">
+        <div class="modal-content">
+            <div class="modal-header">
+                Términos y Condiciones
+                <i class="fa-solid fa-window-close" id="cerrarModal"></i>
+            </div>
+            <div class="modal-body">
+                <p>Los términos y condiciones de protección de datos establecen las obligaciones y derechos de las
+                    personas en cuanto al uso de sus datos personales. 
+                    Urbanistik Consultores se obliga a:
+                <ul class="list">
+                    <li>No dañar, modificar, o deteriorar la información proporcionada.</li>
+                    <li>La información proporcionada se considera una fuente formal de validez.</li>
+                    <li>No brindar u ofrecer esta información a otras fuentes, salvo acciones legales.</li>
+                    <li>Cumplir con las políticas y acuerdos en Protección de Datos Personales.</li>
+                    <li>Brindar un canal de atención, para su debida corrección u omisión si la fuente lo considera
+                        necesario.</li>
+                    <li>Conocer el destino y uso de los datos personales, previa autorización.</li>
+                    <li>Rectificar y cancelar los datos personales.</li>
+                    <li>Oponerse al uso de los datos personales.</li>
+                    <li>Decidir sobre la información y datos personales.</li>
+                    <li>No realizamos levantamiento de Datos Personales Sensibles.</li>
+                </ul>
+                </p>
+            </div>
+        </div>
+    </div>
     <!-- script -->
     <script src="assets/js/main.js"></script>
     <script type="module" src="/assets/js/components.js"></script>
