--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
            <a><i class="fa-solid fa-chevron-up"></i></a>
        </div>
         <section class="urb_copy">
-            © 2025 Desarrollado por Lenny Loor
+            © 2025 Desarrollado por <a href="https://melizloor.vercel.app/" target="_blank">Lenny Loor</a>
         </section>
     </main> 
 
