--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                     políticas públicas y normativas. Nuestra amplia experiencia en el sector público y privado nos
                     permite abordar cada proyecto con un enfoque estratégico, garantizando eficiencia, innovación y
                     cumplimiento normativo en cada solución que ofrecemos.</p>
-                    <button class="urb_btn btn-primary no-select"  onclick="verPortafolio()">Ver portafolio <i class="fa-solid fa-up-right-from-square"></i></button>
+                   <button class="urb_btn btn-primary no-select"  onclick="verPortafolio()">Ver portafolio <i class="fa-solid fa-up-right-from-square"></i></button>
 
             </div>
         </section>
@@ -172,8 +172,8 @@
                     <div class="urb_cont-detalle">
                         <h3>Contáctanos</h3>
                         <p>Puedes escribirnos a través de nuestros canales o seguirnos en redes sociales.</p>
-                        <a><i class="fa-solid fa-phone"></i> (+593) 98 887 2797</a>
-                        <a href="https://wa.me/56963380098" target="_blank">
+                        <a id="urb_call-button"><i class="fa-solid fa-phone"></i> (+593) 98 887 2797</a>
+                        <a href="https://wa.me/593963380098" target="_blank">
                             <i class="fa-brands fa-whatsapp"></i>(+593) 96 338 0098 </a>
                         <a href="mailto:proyectos@urbansitikconsultores.com"><i
                                 class="fa-solid fa-envelope"></i>proyectos@urbanistikconsultores.com</a>
@@ -181,16 +181,11 @@
                 </div>
                 <div class="urb_cont-2">
                     <div class="of-box">
-                        <h3>Oficinas</h3>
-                        <a href="https://maps.app.goo.gl/P4NmPUtEtdd4FQfE9" target="_blank">
-                            Urbanización Sambocity Etapa Hollywood Park Mz. 5 V1
-                            <br><b>Daule – La Aurora</b>
-                        </a>
+                        <h3>Oficina</h3>
                         <a>
-                            Francisco de Marcos 330 y Chimborazo.
-                            2do. Piso 2B.
-                            <br><b>Guayaquil</b>
-                        </a>
+                            Av. León Febres Cordero y Av. Casa Laguna. Sambocity.
+                            <br><b>Daule – La Aurora</b>
+                        </a> 
 
                     </div>
                     <div class="urb_cont-detalle">
